--- a/blackbox/test/models/CMakeLists.txt
+++ b/blackbox/test/models/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+TRIBITS_INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
 SET_AND_INC_DIRS(DIR ${CMAKE_CURRENT_SOURCE_DIR})
 SET(HEADERS "")
 SET(NOINSTALLHEADERS "")
